--- a/src/screens/App/base.less
+++ b/src/screens/App/base.less
@@ -64,6 +64,14 @@
   padding: 15px;
 }
 
+.innerClass {
+	.ant-popover-inner {
+		background-color: #ffffffe0;
+    backdrop-filter: blur(9px);
+    transition: all .25s;
+	}
+}
+
 .rc-drawer-overlay {
   z-index: 1;
   position: absolute;
